@@ -938,10 +938,10 @@ with the "--disable-messages" flag.
 @cindex performance
 Number (unsigned int) of threads in thread pool. Enable
 thread pooling by setting this value to to something
-greater than 1. Currently, thread model must be
+greater than 1. Currently, thread mode must be
 MHD_USE_INTERNAL_POLLING_THREAD if thread pooling is enabled
 (@code{MHD_start_daemon} returns @code{NULL} for an unsupported thread
-model).
+mode).
 
 @item MHD_OPTION_ARRAY
 @cindex options
