@@ -2266,9 +2266,9 @@ MHD_daemon_gnutls_key_and_cert_from_callback (struct MHD_Daemon *daemon,
 
 
 /**
- * Which threading model should be used by MHD?
+ * Which threading mode should be used by MHD?
  */
-enum MHD_ThreadingModel
+enum MHD_ThreadingMode
 {
 
   /**
@@ -2306,21 +2306,21 @@ enum MHD_ThreadingModel
 /**
  * Use a thread pool of size @a n.
  *
- * @return an `enum MHD_ThreadingModel` for a thread pool of size @a n
+ * @return an `enum MHD_ThreadingMode` for a thread pool of size @a n
  */
-#define MHD_TM_THREAD_POOL(n) ((enum MHD_ThreadingModel)(n))
+#define MHD_TM_THREAD_POOL(n) ((enum MHD_ThreadingMode)(n))
 
 
 /**
- * Specify threading model to use.
+ * Specify threading mode to use.
  *
  * @param daemon daemon to configure
- * @param tm model to use (positive values indicate the
+ * @param tm mode to use (positive values indicate the
  *        number of worker threads to be used)
  */
 _MHD_EXTERN void
-MHD_daemon_threading_model (struct MHD_Daemon *daemon,
-			    enum MHD_ThreadingModel tm)
+MHD_daemon_threading_mode (struct MHD_Daemon *daemon,
+			    enum MHD_ThreadingMode tm)
   MHD_NONNULL(1);
 
 
@@ -2470,7 +2470,7 @@ MHD_daemon_connection_memory_limit (struct MHD_Daemon *daemon,
 
 /**
  * Desired size of the stack for threads created by MHD.  Use 0 for
- * system default.  Only useful if the selected threading model
+ * system default.  Only useful if the selected threading mode
  * is not #MHD_TM_EXTERNAL_EVENT_LOOP.
  *
  * @param daemon daemon to configure
